# ed25519-simd-rs

./: Cargo.toml  LICENSE  README.md
benches/: anza_compare.rs  cold_profile.rs  hot_profile.rs  solana_ed25519_compare.rs
benches-compare/: Cargo.toml
benches-compare/benches/: solana_ed25519_compare.rs
docs/: phase2h-design-addendum.md
docs/baselines/: affine-tables-2026-07-09.md  affine-tables-results-2026-07-20.md  c8a-2xlarge-2026-07-20.md  c8i-2xlarge-2026-07-09.md  cumulative-2026-07-10.md  hot-key-fast-path-results-2026-07-21.md  overnight-report.md  phase-1a-affine-tables-2026-07-09.md  phase-1b-affine-hotkeycache-2026-07-09.md  phase-1c-dropped-and-cache-sizing-2026-07-09.md  phase-2f.md  phase-2h.md  phase-2r-spike.md  phase-3.md  phase-f1.md  phase-f2.md
src/: batch.rs  cache.rs  cpuid.rs  edwards.rs  field.rs  hot_key_cache.rs  lib.rs  lru_cache.rs  policy.rs  scalar.rs  sha512.rs  verifier.rs  wide.rs
tests/: anza_compat.rs  batch_edges.rs  public_api.rs  rfc8032.rs  security_vectors.rs  solana_ed25519_compat.rs
tests/support/: mod.rs
tests/vectors/: README.md
