[package]
name = "ed25519-simd"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
criterion = "0.8"
curve25519 = { package = "solana-ed25519", version = "0.1.0" }
rand = "0.8"
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1

[[bench]]
name = "solana_ed25519_compare"
harness = false

[[bench]]
name = "cold_profile"
harness = false
