[package]
name = "ed25519-simd"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Verification-only, AVX-512 IFMA batch Ed25519 signature verification, acceptance-compatible with solana-ed25519"
repository = "https://github.com/efagerho/ed25519-simd-rs"
rust-version = "1.87"

[dependencies]

[dev-dependencies]
curve25519 = { package = "solana-ed25519", version = "0.1.0" }
rand = "0.8"
serde_json = "1"

[workspace]
# The comparison bench against other Ed25519 libraries needs a handful of
# heavy C/asm-backed crates (openssl, sodiumoxide, aws-lc-rs, ring,
# ed25519-dalek) that the correctness test suite and cold-cache profiling
# harness don't; keeping it a separate workspace member means `cargo test`
# and `cargo bench --bench cold_profile` don't pull in that toolchain.
members = ["benches-compare"]

[profile.release]
lto = true
codegen-units = 1

[[bench]]
name = "cold_profile"
harness = false
